test for fix in one of the fonts not showing on github pages

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@
 //Fonts
 
 $main: 'Playfair Display', serif;
-$secondary: 'Londrina Outline', serif;
+$secondary: 'Londrina Outline', cursive;
 
 //colors
 
